added apply button to header, slightly reorganized apply page and forms page

--- a/files/css/common.css
+++ b/files/css/common.css
@@ -97,3 +97,13 @@ main h4 a {
     background-color: #a51417;
     text-align: center;
 }
+
+.download {
+    color: #a51417;
+    text-decoration: underline;
+}
+
+.link  {
+    color: #a51417;
+    text-decoration: underline;
+}
