--- a/files/css/staff_entry.css
+++ b/files/css/staff_entry.css
@@ -23,7 +23,7 @@
   border-color: #eee;
   border-style: solid;
   width: 100%;
-  margin-bottom: 1.5em;
+  margin-top: 1.5em;
 }
 
 .individual-staff-member,
